--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,11 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.0.1'
     implementation 'androidx.fragment:fragment-ktx:1.0.0'
 
+    implementation 'com.auth0.android:jwtdecode:1.3.0'
+
+    implementation 'com.afollestad.material-dialogs:core:2.8.1'
+    implementation 'com.afollestad.material-dialogs:input:2.8.1'
+
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0-alpha03'
