--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     implementation "org.koin:koin-androidx-viewmodel:$koin_version"
 
 
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha04'
     kapt "androidx.room:room-compiler:$rootProject.roomVersion"
     kapt "com.github.bumptech.glide:compiler:$rootProject.glideVersion"
     implementation "androidx.appcompat:appcompat:$rootProject.supportLibraryVersion"
@@ -71,6 +71,18 @@ dependencies {
     implementation 'com.afollestad.material-dialogs:core:2.8.1'
     implementation 'com.afollestad.material-dialogs:input:2.8.1'
 
+    implementation 'com.mikepenz:fastadapter:3.3.1'
+    implementation 'com.mikepenz:fastadapter-commons:3.3.1'
+    implementation 'com.mikepenz:fastadapter-extensions-expandable:3.3.1'
+    implementation 'com.mikepenz:fastadapter-extensions:3.3.1'
+    implementation 'com.mikepenz:materialize:1.2.0'
+    implementation 'com.github.turing-tech:MaterialScrollBar:13.+'
+    implementation'com.crystal:crystalrangeseekbar:1.1.3'
+    implementation 'com.google.android:flexbox:1.1.0'
+    implementation 'com.wdullaer:materialdatetimepicker:4.1.2'
+
+    implementation 'com.jakewharton:butterknife:10.1.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0-alpha03'
