--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.account.AccountActivity"></activity>
+        <activity android:name=".ui.account.AccountActivity" />
         <activity android:name=".ui.login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,8 +27,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.main.MainActivity" />
-        <activity android:name=".ui.history.HistoryActivity" />
+        <activity android:name="com.telecom.conges.ui.request.history.HistoriesActivity" />
         <activity android:name=".ui.request.RequestActivity" />
+        <activity android:name="com.telecom.conges.ui.request.detail.RequestDetailActivity" />
+        <activity android:name=".ui.request.SearchFilterProduct" />
     </application>
 
 </manifest>
