--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         vectorDrawables.useSupportLibrary true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -41,6 +41,7 @@ dependencies {
 
 
     implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha04'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
     kapt "androidx.room:room-compiler:$rootProject.roomVersion"
     kapt "com.github.bumptech.glide:compiler:$rootProject.glideVersion"
     implementation "androidx.appcompat:appcompat:$rootProject.supportLibraryVersion"
@@ -76,13 +77,19 @@ dependencies {
     implementation 'com.mikepenz:fastadapter-extensions-expandable:3.3.1'
     implementation 'com.mikepenz:fastadapter-extensions:3.3.1'
     implementation 'com.mikepenz:materialize:1.2.0'
-    implementation 'com.github.turing-tech:MaterialScrollBar:13.+'
-    implementation'com.crystal:crystalrangeseekbar:1.1.3'
+    implementation 'com.github.turing-tech:MaterialScrollBar:13.3.2'
+    implementation 'com.crystal:crystalrangeseekbar:1.1.3'
     implementation 'com.google.android:flexbox:1.1.0'
     implementation 'com.wdullaer:materialdatetimepicker:4.1.2'
+//    'com.github.applikeysolutions:cosmocalendar:1.0.4'
 
+    implementation 'com.balysv:material-ripple:1.0.2'
+    implementation 'ru.cleverpumpkin:crunchycalendar:1.1.0'
+    implementation 'net.danlew:android.joda:2.10.1.2'
     implementation 'com.jakewharton:butterknife:10.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
+    implementation "androidx.multidex:multidex:2.0.0"
+
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0-alpha03'
