--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".ui.request.RequestValidationActivity"></activity>
         <activity android:name=".ui.account.AccountActivity" />
         <activity android:name=".ui.login.LoginActivity">
             <intent-filter>
@@ -27,10 +28,13 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.main.MainActivity" />
-        <activity android:name="com.telecom.conges.ui.request.history.HistoriesActivity" />
+        <activity android:name=".ui.request.history.HistoriesActivity" />
         <activity android:name=".ui.request.RequestActivity" />
-        <activity android:name="com.telecom.conges.ui.request.detail.RequestDetailActivity" />
+        <activity android:name=".ui.request.detail.RequestDetailActivity" />
         <activity android:name=".ui.request.SearchFilterProduct" />
+        <activity android:name=".ui.ferie.FerieCreateActivity" />
+        <activity android:name=".ui.ferie.FerieDisplayActivity" />
+        <activity android:name=".ui.calendar.CalendarActivity" />
     </application>
 
 </manifest>
