--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,8 @@ dependencies {
     implementation 'com.jakewharton:butterknife:10.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
     implementation "androidx.multidex:multidex:2.0.0"
+    implementation 'com.timqi.sectorprogressview:library:2.0.1'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
 
     testImplementation 'junit:junit:4.12'
