--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.request.RequestValidationActivity"></activity>
-        <activity android:name=".ui.account.DemandsActivity" />
+        <activity android:name=".ui.statistics.StatisticActivity">
+
+        </activity>
+        <activity android:name=".ui.request.RequestValidationActivity" />
+        <activity android:name=".ui.account.AccountActivity" />
         <activity android:name=".ui.login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,11 +34,10 @@
         <activity android:name=".ui.request.history.HistoriesActivity" />
         <activity android:name=".ui.request.RequestActivity" />
         <activity android:name=".ui.request.detail.RequestDetailActivity" />
-        <activity android:name=".ui.request.SearchFilterProduct" />
         <activity android:name=".ui.ferie.FerieCreateActivity" />
         <activity android:name=".ui.ferie.FerieDisplayActivity" />
         <activity android:name=".ui.calendar.CalendarActivity" />
-        <activity android:name=".ui.request.history.SupervisorRequestsActivity" />
+        <activity android:name=".ui.request.RequestsListActivity" />
     </application>
 
 </manifest>
